--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ https://yourcdn.com/bg2.jpg" style="width:100%;min-height:80px"></textarea>
 </div>
 
 <script>
-/* ---------- safety: show first runtime error on-screen ---------- */
+/* show first runtime error on-screen */
 (function(){
   window.addEventListener('error', function(ev){
     var box = document.getElementById('errbox');
@@ -187,7 +187,7 @@ https://yourcdn.com/bg2.jpg" style="width:100%;min-height:80px"></textarea>
 <script>
 document.addEventListener('DOMContentLoaded', function(){
 
-  /* ===== Utils + storage ===== */
+  /* Utils + storage */
   function uuidv4(){ if (crypto.randomUUID) return crypto.randomUUID(); return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g,function(c){var r=Math.random()*16|0,v=c=='x'?r:(r&0x3|0x8);return v.toString(16)}) }
   const Store=(function(){ try{ const t='__t'; localStorage.setItem(t,'1'); localStorage.removeItem(t); return localStorage; }catch(_){ let mem={}; return {getItem:k=>mem[k]||null,setItem:(k,v)=>{mem[k]=String(v)},removeItem:k=>{delete mem[k]}} } })();
   const STORAGE="jlpt_flash_v12"; /* bump to reseed */
@@ -195,7 +195,7 @@ document.addEventListener('DOMContentLoaded', function(){
   const $=s=>document.querySelector(s);
   const $$=s=>document.querySelectorAll(s);
 
-  /* ===== Settings / State ===== */
+  /* Settings / State */
   function loadSettings(){try{return JSON.parse(Store.getItem(SETTINGS)||"{}")}catch(_){return {}}}
   function saveSettings(s){try{const cur=loadSettings();Store.setItem(SETTINGS,JSON.stringify(Object.assign({},cur,s)));}catch(e){Store.setItem(SETTINGS,JSON.stringify(s));}}
   const settingsBootstrap=loadSettings();
@@ -215,13 +215,13 @@ document.addEventListener('DOMContentLoaded', function(){
     bgRemoteRandom:!!settingsBootstrap.bgRemoteRandom
   };
 
-  /* ===== Seeds ===== */
+  /* Seeds */
   const N3_RAW=[["必要","ひつよう","necessary","これは必要です。","This is necessary."],["原因","げんいん","cause","原因は何ですか。","What is the cause?"],["役に立つ","やくにたつ","be useful","この本は役に立ちます。","This book is useful."],["到着","とうちゃく","arrival","電車が到着します。","The train arrives."],["出発","しゅっぱつ","departure","九時に出発します。","We depart at 9."],["予定","よてい","plan; schedule","明日の予定を確認します。","I’ll check tomorrow’s plan."],["準備","じゅんび","preparation","会議の準備をします。","I’ll prepare for the meeting."],["注意","ちゅうい","attention","車に注意してください。","Please watch out for cars."],["経験","けいけん","experience","経験がありません。","I have no experience."],["連絡","れんらく","contact","後で連絡します。","I’ll contact you later."],["比較","ひかく","comparison","価格を比較します。","I’ll compare prices."],["相談","そうだん","consultation","先生に相談します。","I’ll consult the teacher."],["確認","かくにん","confirmation","住所を確認してください。","Please confirm the address."],["返事","へんじ","reply","返事を待っています。","I’m waiting for your reply."],["遅刻","ちこく","tardiness","今日は遅刻しました。","I was late today."],["約束","やくそく","appointment","三時に約束があります。","I have an appointment at 3."],["事故","じこ","accident","事故が起きました。","An accident occurred."],["安心","あんしん","relief","安心してください。","Please don’t worry."],["運転","うんてん","driving","安全に運転してください。","Please drive safely."],["住所","じゅうしょ","address","新しい住所を書きます。","I’ll write my new address."]];
   const N2_RAW=[["維持","いじ","maintenance","健康を維持します。","Maintain health."],["改善","かいぜん","improvement","サービスを改善します。","Improve the service."],["対象","たいしょう","target","学生が対象です。","Students are the target."],["傾向","けいこう","tendency","増加の傾向があります。","There is an increasing trend."],["影響","えいきょう","influence","天気の影響を受けます。","It’s affected by weather."],["判断","はんだん","judgment","状況を判断します。","Judge the situation."],["証拠","しょうこ","evidence","証拠が足りません。","There isn’t enough evidence."],["主張","しゅちょう","assertion","彼は主張を通した。","He insisted on his claim."],["否定","ひてい","denial","関与を否定した。","He denied involvement."],["許可","きょか","permission","入場には許可が必要です。","Permission is required."]];
   const N3=N3_RAW.map(a=>({kanji:a[0],kana:a[1],meaning:a[2],example:a[3],example_en:a[4],level:"N3"}));
   const N2=N2_RAW.map(a=>({kanji:a[0],kana:a[1],meaning:a[2],example:a[3],example_en:a[4],level:"N2"}));
 
-  /* ===== Data I/O ===== */
+  /* Data I/O */
   function freshDeck(){ const now=Date.now(); return [...N3,...N2].map((x,i)=>({id:uuidv4(),...x,status:"new",seen:0,correct:0,addedAt:now+i})) }
   function load(){ const raw=Store.getItem(STORAGE); if(!raw){ const init=freshDeck(); Store.setItem(STORAGE,JSON.stringify(init)); return init; } try{const p=JSON.parse(raw); if(!Array.isArray(p)||p.length===0) throw 0; return p;}catch(_){ Store.removeItem(STORAGE); const init=freshDeck(); Store.setItem(STORAGE,JSON.stringify(init)); return init; } }
   function save(all){Store.setItem(STORAGE,JSON.stringify(all))}
@@ -229,7 +229,7 @@ document.addEventListener('DOMContentLoaded', function(){
   function filterByLevel(list){return state.level==="ALL"?list:list.filter(x=>x.level===state.level)}
   function shuffle(a){a=[...a]; for(let i=a.length-1;i>0;i--){const j=Math.floor(Math.random()*(i+1)); [a[i],a[j]]=[a[j],a[i]]} return a}
 
-  /* ===== Queue & Render ===== */
+  /* Queue & Render */
   function buildQueue(){
     const all=filterByLevel(cards());
     const pools={ learn: all.filter(x=>x.status==="new"||x.status==="not"), review: all.filter(x=>x.status==="review"), drill: all.filter(x=>x.status==="review").concat(all.filter(x=>x.status==="not")) };
@@ -279,7 +279,7 @@ document.addEventListener('DOMContentLoaded', function(){
       else { $("#promptBig").textContent=en; $("#promptSub").textContent=""; $("#answerMain").textContent=`${jp}${kana?`（${kana}）`:""}`; }
       $("#exampleBlock").textContent=`例: ${exJP} / ${exEN}`;
 
-      ansEl.classList.add('hidden-el'); // keep hidden until choice
+      ansEl.classList.add('hidden-el'); // hidden until a choice
       choicesEl.innerHTML = state.drillChoices.map((o,i)=>`<button class="choice-btn" data-idx="${i}">${state.promptMode==="JPEN"?o.item.meaning:(o.item.kanji||o.item.kana)}</button>`).join('');
       choicesEl.classList.remove('hidden-el');
 
@@ -311,7 +311,7 @@ document.addEventListener('DOMContentLoaded', function(){
     nextCard();
   }
 
-  /* ===== Importers ===== */
+  /* Importers */
   function importJSON(text,level){
     let arr=JSON.parse(text); arr=Array.isArray(arr)?arr:[arr];
     const now=Date.now();
@@ -345,7 +345,7 @@ document.addEventListener('DOMContentLoaded', function(){
     r.push(cur); return r.map(s=>s.trim());
   }
 
-  /* ===== Theme + BG ===== */
+  /* Theme + BG */
   function setTheme(mode){ document.body.classList.toggle('dark', mode==='dark'); const btn=$("#themeBtn"); if(btn){ btn.textContent = mode==='dark' ? 'Light' : 'Dark'; btn.setAttribute('aria-pressed', mode==='dark'?'true':'false'); } state.theme=mode; saveSettings({theme:mode}); applyCardOpacity(); }
   function applyBackground(){ if(state.bgDataUrl){ document.documentElement.style.setProperty('--bgimg', `url('${state.bgDataUrl}')`);} else { document.documentElement.style.removeProperty('--bgimg'); } document.documentElement.style.setProperty('--bgimgOpacity', String((state.bgOpacity||0)/100)); const s=$("#bgOpacity"); if(s) s.value=String(state.bgOpacity||0); }
   function applyCardOpacity(){ const dark=document.body.classList.contains('dark'); const alpha=Math.max(0,Math.min(1,(state.cardOpacity||45)/100)); const val = dark ? `rgba(17,22,28,${alpha})` : `rgba(255,255,255,${alpha})`; document.documentElement.style.setProperty('--cardbg', val); const s=$("#cardOpacity"); if(s) s.value=String(state.cardOpacity||45); }
@@ -358,7 +358,7 @@ document.addEventListener('DOMContentLoaded', function(){
     state.bgDataUrl=url; saveSettings({bgDataUrl:state.bgDataUrl}); applyBackground();
   }
 
-  /* ===== Wire up controls ===== */
+  /* Wire up controls */
   const fileInput=$("#bgFile"), uploadBtn=$("#uploadBgBtn"), opacityInput=$("#bgOpacity"), cardOpacityInput=$("#cardOpacity"), clearBtn=$("#clearBgBtn");
   if(uploadBtn && fileInput){ uploadBtn.addEventListener('click',()=>fileInput.click()); }
   if(fileInput){ fileInput.addEventListener('change',e=>{ const f=e.target.files&&e.target.files[0]; if(!f) return; const r=new FileReader(); r.onload=()=>{ state.bgDataUrl=String(r.result); saveSettings({bgDataUrl:state.bgDataUrl}); applyBackground(); }; r.readAsDataURL(f); e.target.value=''; }); }
@@ -370,7 +370,7 @@ document.addEventListener('DOMContentLoaded', function(){
   if(bgRandom){ bgRandom.checked=!!state.bgRemoteRandom; bgRandom.addEventListener('change',e=>{ state.bgRemoteRandom=!!e.target.checked; saveSettings({bgRemoteRandom:state.bgRemoteRandom}); }); }
   if(bgRandomNow){ bgRandomNow.addEventListener('click',()=>setRandomBgFromList(true)); }
 
-  /* ===== Swipe (optional) ===== */
+  /* Swipe */
   (function(){
     const zone=$("#cardZone"), badgeL=$("#badgeLeft"), badgeR=$("#badgeRight");
     let startX=0, dx=0, dragging=false;
@@ -383,7 +383,7 @@ document.addEventListener('DOMContentLoaded', function(){
     zone.addEventListener('touchstart',down,{passive:true}); window.addEventListener('touchmove',move,{passive:true}); window.addEventListener('touchend',up);
   })();
 
-  /* ===== Events ===== */
+  /* Events */
   function setMode(m){state.mode=m; $$(".pill").forEach(p=>p.classList.toggle("active",p.dataset.mode===m)); buildQueue(); draw()}
   function setLevel(v){state.level=v; buildQueue(); draw()}
   $("#levelFilter").addEventListener('change',e=>setLevel(e.target.value));
@@ -404,14 +404,15 @@ document.addEventListener('DOMContentLoaded', function(){
   $("#addBatchBtn").addEventListener('click',()=>{$("#batchModal").classList.remove('hidden-el')});
   $("#closeBatch").addEventListener('click',()=>{$("#batchModal").classList.add('hidden-el')});
   $("#addBatchJson").addEventListener('click',()=>{ const t=$("#batchInput").value.trim(); if(!t){alert('Paste JSON first');return} try{importJSON(t,$("#batchLevel").value); $("#batchInput").value=''; $("#batchModal").classList.add('hidden-el')}catch(e){alert('Invalid JSON')} });
-  $("#addBatchCsv").addEventListener('click',()=>{ const t=$("#batchInput").value.trim(); if(!t){alert('Paste CSV first');return} try{importCSV(t,$("#batchLevel").value); $("#batchInput").value=''; $("#batchModal").classList.add('hidden-el')} });
+  /* FIXED: add missing catch here */
+  $("#addBatchCsv").addEventListener('click',()=>{ const t=$("#batchInput").value.trim(); if(!t){alert('Paste CSV first');return} try{importCSV(t,$("#batchLevel").value); $("#batchInput").value=''; $("#batchModal").classList.add('hidden-el')} catch(e){alert('Invalid CSV')} });
   $("#importFile").addEventListener('change',function(e){
     const f=e.target.files&&e.target.files[0]; if(!f) return;
     const r=new FileReader(); r.onload=()=>{ try{ importJSON(String(r.result)); alert('Import complete'); }catch(_){ alert('Import failed'); } finally { buildQueue(); draw(); } };
     r.readAsText(f); e.target.value='';
   });
 
-  /* ===== Init ===== */
+  /* Init */
   const prefersDark=window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
   setTheme(state.theme|| (prefersDark?'dark':'light'));
   applyBackground(); applyCardOpacity();
