--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   body.dark .choice-btn{background:#141a21;border-color:#4a5160;color:var(--fg)}
 
   /* Background layer */
-  body::before{content:"";position:fixed;inset:0;background-image:var(--bgimg,linear-gradient(135deg,rgba(2,6,23,.85),rgba(30,58,138,.65)));background-size:cover; background-position: top center;background-repeat:no-repeat;opacity:var(--bgimgOpacity,.2);transition:opacity .2s;pointer-events:none;z-index:-1}
+  body::before{content:"";position:fixed;inset:0;background-image:var(--bgimg,linear-gradient(135deg,rgba(2,6,23,.85),rgba(30,58,138,.65)));background-size:cover; background-position: center 30%;background-repeat:no-repeat;opacity:var(--bgimgOpacity,.2);transition:opacity .2s;pointer-events:none;z-index:-1}
   details.bg-controls{position:fixed; top:12px; right:12px; z-index:1000}
   details.bg-controls summary{list-style:none;cursor:pointer}
   details.bg-controls summary::-webkit-details-marker{display:none}
