--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ document.addEventListener('DOMContentLoaded', function(){
 
   /* NEW: your default pool of BGs */
   const defaultBgList = [
-   "./girl%207_t.png"
+    "./girl%207_t.png",
     "./girl%205_t.png",
     "./girl%204_t.png",
     "./girl%203_t.jpg",
