--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@ document.addEventListener('DOMContentLoaded', function(){
 
   /* NEW: your default pool of BGs */
   const defaultBgList = [
-    "./girl%207_t.png",
-    "./girl%205_t.png",
-    "./girl%204_t.png",
-    "./girl%203_t.jpg",
-    "./girl%202_t.png",
-    "./girl%201_t.jpg"
+    "./girl-7_t.png",
+    "./girl-5_t.png",
+    "./girl-4_t.png",
+    "./girl-3_t.jpg",
+    "./girl-2_t.png",
+    "./girl-1_t.jpg"
   ].join("\n");
 
   const state={
