--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@ document.addEventListener('DOMContentLoaded', function(){
   /* NEW: your default pool of BGs */
   const defaultBgList = [
     "./girl-7_t.png",
+    "./girl-6_t.png",
     "./girl-5_t.png",
     "./girl-4_t.png",
     "./girl-3_t.jpg",
