--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>JLPT N3/N2 Flashcards</title>
 <style>
-  :root{--bg:#fff;--fg:#111;--muted:#666;--line:#e6e6e6;--btn:#f6f6f6;--btn2:#111;--btnfg:#111;--btn2fg:#fff;--radius:14px;--cardw:min(720px,92vw);--cardbg:rgba(255,255,255,0.45)}
+  :root{--bg:#fff;--fg:#111;--muted:#666;--line:#e6e6e6;--btn:#f6f6f6;--btn2:#111;--btnfg:#111;--btn2fg:#fff;--radius:14px;--cardw:min(720px,90vw);--cardbg:rgba(255,255,255,0.45)}
   body{margin:0;background:var(--bg);color:var(--fg);font:16px/1.45 -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial}
   .wrap{max-width:920px;margin:0 auto;padding:18px}
   header{display:flex;flex-wrap:wrap;gap:10px;align-items:center;justify-content:space-between;margin-bottom:12px}
@@ -70,6 +70,12 @@
   .card.flash-ng{border-color:#ef4444;box-shadow:0 0 0 2px #ef4444 inset,0 10px 30px rgba(0,0,0,.18)}
   @keyframes shake{0%,100%{transform:translateX(0)}20%{transform:translateX(-6px)}40%{transform:translateX(6px)}60%{transform:translateX(-4px)}80%{transform:translateX(4px)}}
   .shake{animation:shake .28s linear 1}
+
+  @media (max-width: 640px){
+    .wrap{padding:12px 5vw}
+    .card{width:100%}
+    header{gap:8px}
+  }
 </style>
 </head>
 <body>
@@ -206,10 +212,13 @@ document.addEventListener('DOMContentLoaded',function(){
   const settingsBootstrap=loadSettings();
   const defaultBgList=["./girl-7_t.jpg","./girl-6_t.jpg","./girl-5_t.png","./girl-4_t.png","./girl-3_t.png","./girl-2_t.png","./girl-1_t.jpg"].join("\n");
   const state={mode:"learn",level:"ALL",queue:[],current:null,promptMode:settingsBootstrap.promptMode||"JPEN",theme:settingsBootstrap.theme||null,bgDataUrl:(settingsBootstrap.bgDataUrl??null),bgOpacity:typeof settingsBootstrap.bgOpacity==='number'?settingsBootstrap.bgOpacity:20,cardOpacity:typeof settingsBootstrap.cardOpacity==='number'?settingsBootstrap.cardOpacity:45,answered:false,drillChoices:[],bgRemoteList:(settingsBootstrap.bgRemoteList&&settingsBootstrap.bgRemoteList.trim())?settingsBootstrap.bgRemoteList:defaultBgList,bgRemoteRandom:(typeof settingsBootstrap.bgRemoteRandom==='boolean'?settingsBootstrap.bgRemoteRandom:true)};
+
+  // N3/N2 decks
   const N3_RAW=[["必要","ひつよう","necessary","これは必要です。","This is necessary."],["原因","げんいん","cause","原因は何ですか。","What is the cause?"],["役に立つ","やくにたつ","be useful","この本は役に立ちます。","This book is useful."],["到着","とうちゃく","arrival","電車が到着します。","The train arrives."],["出発","しゅっぱつ","departure","九時に出発します。","We depart at 9."],["予定","よてい","plan; schedule","明日の予定を確認します。","I’ll check tomorrow’s plan."],["準備","じゅんび","preparation","会議の準備をします。","I’ll prepare for the meeting."],["注意","ちゅうい","attention","車に注意してください。","Please watch out for cars."],["経験","けいけん","experience","経験がありません。","I have no experience."],["連絡","れんらく","contact","後で連絡します。","I’ll contact you later."],["比較","ひかく","comparison","価格を比較します。","I’ll compare prices."],["相談","そうだん","consultation","先生に相談します。","I’ll consult the teacher."],["確認","かくにん","confirmation","住所を確認してください。","Please confirm the address."],["返事","へんじ","reply","返事を待っています。","I’m waiting for your reply."],["遅刻","ちこく","tardiness","今日は遅刻しました。","I was late today."],["約束","やくそく","appointment","三時に約束があります。","I have an appointment at 3."],["事故","じこ","accident","事故が起きました。","An accident occurred."],["安心","あんしん","relief","安心してください。","Please don’t worry."],["運転","うんてん","driving","安全に運転してください。","Please drive safely."],["住所","じゅうしょ","address","新しい住所を書きます。","I’ll write my new address."]];
   const N2_RAW=[["維持","いじ","maintenance","健康を維持します。","Maintain health."],["改善","かいぜん","improvement","サービスを改善します。","Improve the service."],["対象","たいしょう","target","学生が対象です。","Students are the target."],["傾向","けいこう","tendency","増加の傾向があります。","There is an increasing trend."],["影響","えいきょう","influence","天気の影響を受けます。","It’s affected by weather."],["判断","はんだん","judgment","状況を判断します。","Judge the situation."],["証拠","しょうこ","evidence","証拠が足りません。","There isn’t enough evidence."],["主張","しゅちょう","assertion","彼は主張を通した。","He insisted on his claim."],["否定","ひてい","denial","関与を否定した。","He denied involvement."],["許可","きょか","permission","入場には許可が必要です。","Permission is required."]];
   const N3=N3_RAW.map(a=>({kanji:a[0],kana:a[1],meaning:a[2],example:a[3],example_en:a[4],level:"N3"}));
   const N2=N2_RAW.map(a=>({kanji:a[0],kana:a[1],meaning:a[2],example:a[3],example_en:a[4],level:"N2"}));
+
   function freshDeck(){const now=Date.now();return[...N3,...N2].map((x,i)=>({id:uuidv4(),...x,status:"new",seen:0,correct:0,addedAt:now+i}))}
   function load(){const raw=Store.getItem(STORAGE);if(!raw){const init=freshDeck();Store.setItem(STORAGE,JSON.stringify(init));return init}try{const p=JSON.parse(raw);if(!Array.isArray(p)||p.length===0)throw 0;return p}catch(_){Store.removeItem(STORAGE);const init=freshDeck();Store.setItem(STORAGE,JSON.stringify(init));return init}}
   function save(all){Store.setItem(STORAGE,JSON.stringify(all))}
@@ -234,6 +243,7 @@ document.addEventListener('DOMContentLoaded',function(){
   function applyCardOpacity(){const dark=document.body.classList.contains('dark');const alpha=Math.max(0,Math.min(1,(state.cardOpacity||45)/100));const val=dark?`rgba(17,22,28,${alpha})`:`rgba(255,255,255,${alpha})`;document.documentElement.style.setProperty('--cardbg',val);const s=$("#cardOpacity");if(s)s.value=String(state.cardOpacity||45)}
   function parseBgList(text){return String(text||'').replace(/\r\n/g,'\n').split(/\n+/).map(s=>s.trim()).filter(Boolean)}
   function setRandomBgFromList(manual){const list=parseBgList(state.bgRemoteList);if(!list.length)return;const pick=list[Math.floor(Math.random()*list.length)];const url=pick+(pick.includes('?')?'&':'?')+'t='+(manual?Date.now():Math.floor(Date.now()/3600000));state.bgDataUrl=url;saveSettings({bgDataUrl:state.bgDataUrl});applyBackground()}
+
   const fileInput=$("#bgFile"),uploadBtn=$("#uploadBgBtn"),opacityInput=$("#bgOpacity"),cardOpacityInput=$("#cardOpacity"),clearBtn=$("#clearBgBtn");
   if(uploadBtn&&fileInput){uploadBtn.addEventListener('click',()=>fileInput.click())}
   if(fileInput){fileInput.addEventListener('change',e=>{const f=e.target.files&&e.target.files[0];if(!f)return;const r=new FileReader();r.onload=()=>{state.bgDataUrl=String(r.result);saveSettings({bgDataUrl:state.bgDataUrl});applyBackground()};r.readAsDataURL(f);e.target.value=''})}
@@ -244,7 +254,9 @@ document.addEventListener('DOMContentLoaded',function(){
   if(bgUrls){bgUrls.value=state.bgRemoteList||'';bgUrls.addEventListener('change',e=>{state.bgRemoteList=e.target.value;saveSettings({bgRemoteList:state.bgRemoteList})})}
   if(bgRandom){bgRandom.checked=!!state.bgRemoteRandom;bgRandom.addEventListener('change',e=>{state.bgRemoteRandom=!!e.target.checked;saveSettings({bgRemoteRandom:state.bgRemoteRandom})})}
   if(bgRandomNow){bgRandomNow.addEventListener('click',()=>setRandomBgFromList(true))}
+
   (function(){const zone=$("#cardZone"),badgeL=$("#badgeLeft"),badgeR=$("#badgeRight");let startX=0,dx=0,dragging=false;function down(e){dragging=true;startX=(e.touches?e.touches[0].clientX:e.clientX);zone.classList.add('swiping')}function move(e){if(!dragging)return;const x=(e.touches?e.touches[0].clientX:e.clientX);dx=x-startX;zone.style.transform=`translateX(${dx}px) rotate(${dx*0.03}deg)`;zone.classList.toggle('succeed',dx>60);zone.classList.toggle('fail',dx<-60);if(badgeR)badgeR.style.opacity=String(Math.min(1,Math.max(0,(dx-40)/100)));if(badgeL)badgeL.style.opacity=String(Math.min(1,Math.max(0,(-dx-40)/100)))}function reset(){zone.style.transition='transform .18s ease';zone.style.transform='translateX(0) rotate(0)';if(badgeR)badgeR.style.opacity='0';if(badgeL)badgeL.style.opacity='0';setTimeout(()=>{zone.style.transition=''},180)}function commit(dir){zone.style.transition='transform .18s ease';const off=dir>0?600:-600;const rot=dir>0?15:-15;zone.style.transform=`translateX(${off}px) rotate(${rot}deg)`;if(badgeR)badgeR.style.opacity='0';if(badgeL)badgeL.style.opacity='0';setTimeout(()=>{zone.style.transition='';zone.style.transform='';markStatus(dir>0?'learned':'not')},160)}function up(){if(!dragging)return;dragging=false;zone.classList.remove('swiping','succeed','fail');if(dx>120){commit(1)}else if(dx<-120){commit(-1)}else{reset()}dx=0}zone.addEventListener('pointerdown',down);window.addEventListener('pointermove',move);window.addEventListener('pointerup',up);zone.addEventListener('touchstart',down,{passive:true});window.addEventListener('touchmove',move,{passive:true});window.addEventListener('touchend',up)})();
+
   function setMode(m){state.mode=m;$$('.pill').forEach(p=>p.classList.toggle('active',p.dataset.mode===m));buildQueue();draw()}
   function setLevel(v){state.level=v;buildQueue();draw()}
   $("#levelFilter").addEventListener('change',e=>setLevel(e.target.value));
@@ -265,6 +277,7 @@ document.addEventListener('DOMContentLoaded',function(){
   document.addEventListener('click',e=>{const btn=e.target.closest('.choice-btn');if(!btn)return;if(state.mode!=='drill'||state.answered)return;const idx=parseInt(btn.getAttribute('data-idx'),10);const opt=state.drillChoices[idx];state.drillChoices.forEach((o,i)=>{const el=document.querySelector(`.choice-btn[data-idx="${i}"]`);if(!el)return;if(o.correct)el.classList.add('correct')});if(!opt.correct)btn.classList.add('wrong');state.answered=true;setAnswerVisible(true);showResult(!!opt.correct);const rb=$("#revealBtn");if(rb){rb.disabled=false;rb.removeAttribute('aria-disabled');rb.textContent='Next'}});
   function showResult(ok){const res=$("#result"),card=$("#cardZone");if(!res||!card)return;res.className='result '+(ok?'ok show':'ng show');res.innerHTML=`<div class="icon">${ok?'✓':'✕'}</div>`;card.classList.remove('flash-ok','flash-ng','shake');if(ok){card.classList.add('flash-ok')}else{card.classList.add('flash-ng','shake')}if(navigator.vibrate){try{navigator.vibrate(ok?[30]:[10,80,10])}catch(_){}}}
   function clearResult(){const res=$("#result"),card=$("#cardZone");if(res){res.className='result';res.innerHTML=''}if(card){card.classList.remove('flash-ok','flash-ng','shake')}}
+
   const prefersDark=window.matchMedia&&window.matchMedia('(prefers-color-scheme: dark)').matches;setTheme(state.theme||(prefersDark?'dark':'light'));if(state.bgRemoteRandom){setRandomBgFromList(false)}else{applyBackground()}applyCardOpacity();buildQueue();draw();
 });
 </script>
